--- a/web/portal/public/index.html
+++ b/web/portal/public/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site for Dymium employees"
+      content="Dymium customer portal"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
